@@ -159,3 +159,8 @@
 2017-02-22 Fred Gleason <fredg@paravelsystems.com>
 	* Modified the 'Edit Log Entry' dialog to display a blank cart
 	number field if no cart has been selected yet.
+2017-02-22 Fred Gleason <fredg@paravelsystems.com>
+	* Enabled correct display of Chain, Marker and Track events
+	in the 'Edit Log' dialog.
+	* Enabled correct editing of Chain, Marker and Track events
+	in the 'Edit Log Entry' dialog.
